add photos for background testing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #DADDFC;
+  font-family: 'Roboto', sans-serif;
 }
