--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -1,3 +1,17 @@
 .navbar {
   background-color: #FC997C;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-header {
+  margin: 0 2rem;
+}
+
+.nav-button {
+  margin: 0 1rem 0 0;
+}
+
+.nav-button-container {
+  margin: 0 1rem 0 0;
 }
