--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,4 +3,5 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: transparent;
   font-family: 'Roboto', sans-serif;
+  margin: 0 auto;
 }
