save before modal css refactor

--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -6,6 +6,7 @@
 }
 
 .nav-header {
+  display: flex;
   position: relative;
   color: #009DAE;
   margin: 0 2rem;
@@ -15,6 +16,17 @@
   max-width: 1.4em;
   background-size: cover;
   background-position: center;
+  margin: 0 0.3em;
+}
+
+#nav-title {
+  display: flex;
+  font-weight: 500;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  vertical-align: center;
+  transform: translate(0, 0.1em);
 }
 
 .nav-button {
@@ -27,10 +39,6 @@
 
 .nav-button-container {
   margin: 0 1rem 0 0;
-}
-
-.navbar-brand > * {
-  display: inline-block;
 }
 
 
