--- a/frontend/src/styles/main-page.css
+++ b/frontend/src/styles/main-page.css
@@ -47,9 +47,11 @@
 
 #splash-signup {
   color: white;
+  background-color: #009DAE;
   mix-blend-mode: multiply;
   font-size: 0.7em;
   padding: 0.2em 1.2em;
+  margin: 2em 0;
 }
 
   /* background-color: #000;
