--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -5,11 +5,20 @@
   justify-content: space-between;
 }
 
+.navbar + * {
+  margin-top: 60px;
+}
+
 .nav-header {
   display: flex;
   position: relative;
   color: #009DAE;
   margin: 0 2rem;
+}
+
+.nav-header * {
+  list-style-type: none;
+  text-decoration: none;
 }
 
 #nav-logo {
@@ -26,6 +35,7 @@
   justify-content: center;
   text-align: center;
   vertical-align: center;
+  text-decoration: none;
   transform: translate(0, 0.1em);
 }
 
