--- a/frontend/src/styles/class-show-page.css
+++ b/frontend/src/styles/class-show-page.css
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.class-show-page header {
+  text-align: center;
+}
+
 .class-show-page button.btn {
   margin-bottom: 10px;
   width: 300px;
