--- a/frontend/src/styles/class-page.css
+++ b/frontend/src/styles/class-page.css
@@ -90,6 +90,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 100%;
   height: 100%;
 }
@@ -107,8 +108,15 @@
   margin: 0 0 20px;
   padding: 10px;
   width: 100%;
-  background-color: #C2FFF9;
+  background-color: #FFE652;
   border-radius: 8px;
+  text-align: center;
+  color: #009DAE;
+  font-weight: 700;
+}
+
+.add-many-tab:hover, .add-one-tab:hover {
+  cursor: pointer;
 }
 
 .class-page .student-form-container textarea {
@@ -124,6 +132,7 @@
 
 .class-page .student-form-container .student-index {
   width: 100%;
+  text-align: left;
 }
 
 .class-page .student-form-container .student-index ul {
