Slightly style student show page

--- a/frontend/src/styles/class-show-page.css
+++ b/frontend/src/styles/class-show-page.css
@@ -29,7 +29,9 @@
   margin-top: 30px;
   width: 70%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 /* the message that shows up if they don't have any students yet */
