--- a/frontend/src/styles/student-show-page.css
+++ b/frontend/src/styles/student-show-page.css
@@ -11,6 +11,7 @@
   color: white;
   background-color: #009DAE;
   border-color: #009DAE;
+  transition: 0.3s ease-out;
 }
 
 .student-show-page button.btn:hover {
