--- a/frontend/src/styles/modal.css
+++ b/frontend/src/styles/modal.css
@@ -69,15 +69,17 @@
 }
 
 .session-submit {
+  transition: 0.3s ease-out;
   text-align: center;
   font-size: 16px;
   background-color: #009DAE;
   border: 1px solid rgb(184, 34, 45);
-  color: #FFF
+  color: #FFF;
 }
 
 .session-submit:hover {
   background-color: #017987;
+  color: #FFF;
 }
 
 .modal-switch-container {
