--- a/frontend/src/styles/class-show-page.css
+++ b/frontend/src/styles/class-show-page.css
@@ -22,6 +22,10 @@
   position: relative;
 }
 
+.top-line .dots:hover {
+  cursor: pointer;
+}
+
 .top-line .dots .panel {
   position: absolute;
   display: flex;
