--- a/frontend/src/styles/report-data.css
+++ b/frontend/src/styles/report-data.css
@@ -1,15 +1,16 @@
 .report-form-container {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
+  display: flex;
+  justify-content: space-between;
 }
 
 .report-form {
   margin: 3em;
   padding: 3em;
   display: flex;
+  justify-content: space-between;
+  min-width: 50em;
   /* flex-direction: column; */
-  border: 1px #009DAE solid;
+  /* border: 1px #009DAE solid; */
   border-radius: 8px;
   background-color: #C2FFF9;
 }
@@ -23,15 +24,6 @@
   display: flex;
 }
 
-.boolean-radio {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.boolean-radio > input {
-  margin: 0 3em 0 0;
-}
-
 .boolean-values {
   display: flex;
   padding: 0 2em;
@@ -39,22 +31,25 @@
   justify-content: space-around
 }
 
-.boolean-radio {
-  margin: 2.0em 1em;
-}
-
-.boolean-values h6 {
-  margin: 0 0 1.5em 0;
+.true-container, .false-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0.3em 0 0 0;
 }
 
 .boolean-labels {
-  margin: 2em 0 0 0;
+  margin: 0 0 0 0;
 }
 
 .boolean-category {
-  padding: 1em;
-  margin: 0em 1em;
+  line-height: 24px;
+  margin: 0 3em;
 }
+
+.boolean-radio {
+  margin: 0.15em;
+}
+
 
 input[type=radio] {
   -webkit-appearance: none;
