--- a/frontend/src/styles/modal.css
+++ b/frontend/src/styles/modal.css
@@ -84,7 +84,7 @@
   text-align: center;
   font-size: 16px;
   background-color: #009DAE;
-  border: 1px solid rgb(184, 34, 45);
+  /* border: 1px solid rgb(184, 34, 45); */
   color: #FFF;
 }
 
