--- a/frontend/src/styles/report-text.css
+++ b/frontend/src/styles/report-text.css
@@ -17,6 +17,7 @@
   background-color: #009DAE;
   border-color: #009DAE;
   transition: 0.3s ease-out;
+  outline: none;
 }
 
 .report-text-page button.btn:hover {
