--- a/frontend/src/styles/report-data.css
+++ b/frontend/src/styles/report-data.css
@@ -113,6 +113,8 @@
   margin: 2em 4em 0 0;
   align-items: center;
   font-size: 24px;
+  text-align: center;
+  vertical-align: center;
 }
 
 #report-data-submit {
