Edit report data form and styles, alphabetize selectable students index

--- a/frontend/src/styles/report-data.css
+++ b/frontend/src/styles/report-data.css
@@ -18,6 +18,10 @@
   background-color: #C2FFF9;
 }
 
+.report-form-top {
+  margin: 1em 3em 1em;
+}
+
 .report-form-bottom {
   display: flex;
   flex-direction: column;
