--- a/frontend/src/styles/modal.css
+++ b/frontend/src/styles/modal.css
@@ -24,9 +24,12 @@
   background: rgba(0, 0, 0, 0.7);
   padding: 1.875rem 1rem;
   z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.modal-child {
+/* .modal-child {
   display: flex;
   justify-content: left; 
   position: absolute;
@@ -42,6 +45,21 @@
   padding-bottom: 30px;
   transform: translate(-50%, -50%);
   transition: all ease 1s;
+} */
+
+.modal-child {
+  position: relative;
+  background: #FFF;
+  width: 80vw;
+  height: 80vh;
+  /* height: fit-content; */
+  border-radius: 5px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  overflow:scroll;
+  transition: all ease 1s;
 }
 
 .modal-child h2 {
@@ -50,8 +68,6 @@
   font-size: 28px;
   font-weight: 500;
   padding-bottom: 10px;
-  width: 560px;
-  /* border-bottom: red; */
   border-bottom: 1px solid #d8d9db;
 }
 
@@ -60,8 +76,8 @@
 }
 
 .session-form input {
-  width: 530px;
-  padding: 15px 15px 15px 15px;
+  width: 100%;
+  padding: 1em;
   margin: 1em 0 0 0;
   border: 1px solid #d8d9db;
   border-radius: 5px;
@@ -95,7 +111,7 @@
 
 .modal-switch-container {
   display: flex;
-  width: 530px;
+  width: 100%;
   justify-content: center;
   margin: 1.5em 0 0 0;
 }
@@ -117,4 +133,11 @@
 
 .instructions-body {
   margin-top: 1em;
+}
+
+@media (min-width: 752px) {
+  .modal-child {
+    width: 600px;
+    height: fit-content;
+  }
 }
