--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -29,6 +29,11 @@
       height: 40px;
     }
 
+    .navbar-toggler {
+      padding-left: 1em;
+      padding-right: 1em;
+    }
+
     .navbar-toggler-icon{
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 157, 174, 1.0%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='3' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
       color: #009DAE;
