--- a/frontend/src/styles/modal.css
+++ b/frontend/src/styles/modal.css
@@ -1,20 +1,3 @@
-/* .modal-background {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  z-index: 10;
-}
-
-.modal-child {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
-
 .modal-background {
   position: fixed;
   top: 0;
@@ -116,6 +99,9 @@
   margin: 1.5em 0 0 0;
 }
 
+.modal-switch-container p {
+  text-align: center;
+}
 
 .modal-switch {
   /* text-align: center;
